# data_collection

./: .gitignore
camera_calibration/: README.md  requirements.txt
camera_calibration/config/: calibration.yaml
camera_calibration/scripts/: calibrate_all_cameras.py  calibrate_camera.py  capture_realsense_dataset.py  common.py  extrinsic_calibrate.py  generate_checkerboard.py  run_single_device_calibration.py  stereo_calibrate.py  undistort_image.py
camera_calibration/scripts/__pycache__/: common.cpython-313.pyc.1684720923344  common.cpython-313.pyc.2012171895712
multi_camera_calibration/: README.md  camera_calibration_js.py  estimate_rgb_extrinsics.py  export_intrisic.py  image_capture.py  requirements.txt  test_apriltag_pose_single_camera.py  track_apriltag_pose_deltas.py
multi_camera_calibration/config/: apriltag_test.yaml  apriltag_tracking.yaml  capture.yaml  extrinsics.yaml
muti_camera_calibration/: README.md  capture_two_d435i_rgb_pairs.py  estimate_rgb_extrinsics.py
muti_camera_calibration/config/: capture.yaml  extrinsics.yaml
ros_ws/: README.md
ros_ws/src/: CMakeLists.txt
ros_ws/src/two_camera_rgb_extrinsic/: CMakeLists.txt  package.xml
ros_ws/src/two_camera_rgb_extrinsic/config/: default.yaml  dual_camera_preview.rviz  dual_d435i.yaml
ros_ws/src/two_camera_rgb_extrinsic/launch/: capture_pairs.launch  dual_d435i_capture.launch  dual_d435i_rgb.launch
ros_ws/src/two_camera_rgb_extrinsic/scripts/: capture_rgb_pairs.py  estimate_rgb_extrinsics.py  launch_dual_d435i_rgb.py  print_realsense_devices.py
ros_ws/src/two_camera_rgb_extrinsic/src/: capture_rgb_pairs_node.cpp
