<?xml version="1.0"?>
<package format="2">
  <name>two_camera_rgb_extrinsic</name>
  <version>0.1.0</version>
  <description>ROS Noetic workspace package for two-camera RGB extrinsic calibration.</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export/>
</package>
